crates/apollo-compiler/test_data/diagnostics/0029_directive_definitions_with_duplicate_names.txt
Error: the directive `@foo` is defined multiple times in the document
    ╭─[0029_directive_definitions_with_duplicate_names.graphql:11:12]
    │
 10 │ directive @foo on SCHEMA
    │            ─┬─  
    │             ╰─── previous definition of `@foo` here
 11 │ directive @foo on SCHEMA
    │            ─┬─  
    │             ╰─── `@foo` redefined here
    │ 
    │ Help: remove or rename one of the definitions
────╯

